# python-advanced

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: python.yaml
python-advanced/: __main__.py  file_helper.py  main.py
tests/: main_test.py
